--- a/rpsUI/styles.css
+++ b/rpsUI/styles.css
@@ -14,7 +14,11 @@ body {
     margin-right: auto;
     width: max-content;
 }
+
 .title {
+  
+}
+.titleText {
     color: mintcream;
     font-size: 100px;
     text-align: center;
@@ -35,21 +39,28 @@ body {
     border-image-slice: 1;
     border-image-source: linear-gradient(to right, HotPink, MidnightBlue);*/
     box-shadow:  0px 0px 80px 85px MintCream;
-    display: flex;
-    flex-direction: column;
-
+    
 }
 
 button {
-    /*background-color: mintcream;*/
     background-image: linear-gradient(midnightblue, hotpink);
     color: mintcream;
     font-size: 40px;
     border-radius: 10px;
     border: 1px solid mintcream;
     padding: 10px 20px;
-   
-    
+
+}
+button:hover {
+    background-image: linear-gradient(mintcream, MintCream) ;
+    background: linear-gradient(to left, MidnightBlue, HotPink);
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 2px transparent;
+}
+
+#gameBtn {
+    transform: scale(1.5);
+    transition: 0.25s;
 
 }
 
