--- a/rpsUI/styles.css
+++ b/rpsUI/styles.css
@@ -1,7 +1,19 @@
+html {
+    height: 100%;
+}
+
 body {
-    background-image: linear-gradient(MidnightBlue, HotPink);
-    min-height: 100vh;
+    background-image: radial-gradient(circle at top left, rgb(25, 25, 112, 0.5), rgb(255, 105, 180), rgb(0, 206, 209, 0.5), transparent),
+        radial-gradient(circle at bottom right, rgb(25, 25, 112), rgb(255, 105, 180, 0.9), rgb(0, 206, 209, 0.5), transparent)
+        ; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
     width: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 #container {
@@ -21,7 +33,6 @@ body {
     color: mintcream;
     font-size: 80px;
     text-align: center;
-    font-family: sans-serif;
     margin-top: 10px;
     padding-bottom: 50px;
     margin: 20px;
@@ -37,25 +48,32 @@ body {
 }
 
 button {
-    background-color: mintcream;
-    
-    background-image: linear-gradient(-91deg, hotpink, MidnightBlue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: mintcream;
+    background-color: hotpink;
     font-size: 40px;
     border-radius: 10px;
-    border: 1px solid mintcream;
+    border: 3px solid rgb(2, 255, 255);
     padding: 10px 20px;
-
+    margin-left: 20px;
+    box-shadow: 5px 5px midnightblue;
 }
 button:hover {
-    background-image: linear-gradient(mintcream, MintCream) ;
-    background: linear-gradient(to left, MidnightBlue, HotPink);
-    -webkit-background-clip: text;
-    -webkit-text-stroke: 2px transparent;
+    box-shadow: 2px 2px hotpink;
 }
+
+button:active {
+    background-color: rgb(2, 255, 255);
+}
+
 
 #yesBtn {
     margin-right: 25px;
 }
 
+p {
+    font-size: larger;
+}
+
+.gameOver {
+    font-size: xx-large;
+}
