--- a/rpsUI/styles.css
+++ b/rpsUI/styles.css
@@ -48,17 +48,19 @@ body {
 }
 
 button {
-    color: mintcream;
-    background-color: hotpink;
+    color: rgb(245, 255, 250);
+    background-color: rgb(255, 105, 180);
     font-size: 40px;
     border-radius: 10px;
-    border: 3px solid rgb(2, 255, 255);
+    border: 3px solid rgb(0, 206, 209);
     padding: 10px 20px;
     margin-left: 20px;
-    box-shadow: 5px 5px midnightblue;
+    box-shadow:  0px 0px 5px 5px rgb(25, 25, 112, 0.2);
 }
 button:hover {
-    box-shadow: 2px 2px hotpink;
+    box-shadow: 0px 0px 2px 2px rgb(255, 105, 180, 0.2);
+    background-color: rgb(255, 105, 180);
+    cursor: pointer;
 }
 
 button:active {
@@ -68,6 +70,15 @@ button:active {
 
 #yesBtn {
     margin-right: 25px;
+    box-shadow: 0px 0px 5px 5px rgb(245, 255, 250, 0.5);
+}
+#noBtn {
+    box-shadow: 0px 0px 5px 5px rgb(245, 255, 250, 0.5);
+}
+
+#yesBtn:hover, #noBtn:hover {
+    box-shadow: 0px 0px 2px 2px rgb(245, 255, 250, 0.5);
+    cursor: pointer;
 }
 
 p {
